base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-frontend
  labels:
    app: messaging-frontend
    tier: frontend
spec:
  selector:
    app: messaging-frontend
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
